<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#fff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/interest_calculator"
        android:textColor="#ff6b08"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/firstDate" />

        <TextView
            android:id="@+id/first_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.3"
            android:gravity="start"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/lastDate" />


        <TextView
            android:id="@+id/last_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.3"
            android:gravity="start"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/amount_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:background="@drawable/input_amount_text"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:inputType="numberSigned"
                android:textColor="#f00"
                android:background="#fff"
                android:textSize="20sp"
                android:gravity="center"
                android:hint="@string/initial_amount"
                android:padding="2dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/input_amount_text"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/interest_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:inputType="numberDecimal"
                android:textColor="#f00"
                android:layout_marginRight="7dp"
                android:background="#fff"
                android:gravity="center"
                android:textSize="20sp"
                android:hint="@string/interest_rate"
                android:padding="2dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkbox_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount_field"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cumulative" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_back"
        android:gravity="center"
        android:paddingLeft="100dp"
        android:paddingTop="5dp"
        android:paddingRight="100dp"
        android:paddingBottom="5dp"
        android:text="@string/submit"
        android:textColor="#2a2df5" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/submit"
        android:layout_above="@+id/txt_name"
        android:layout_marginTop="10dp"
        android:background="#fff"
        app:cardElevation="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:background="#fff" />

                <TextView
                    android:id="@+id/days_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:background="#fff" />

                <TextView
                    android:id="@+id/init_amount_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:background="#fff" />

                <TextView
                    android:id="@+id/initerest_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:background="#fff" />

                <TextView
                    android:id="@+id/total_amount_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp" />

            </LinearLayout>

        </ScrollView>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_copy"
        android:background="#fff"
        android:onClick="showMyBio"
        android:text="Umesh Patidar Dangrecha"
        android:textAlignment="center"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/txt_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:background="#fff"
        android:onClick="showMyBio"
        android:text="Copyright © Patidar Ji Technicals group 2020"
        android:textAlignment="center" />
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2388449991477825/4757609951">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>